--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -47,6 +47,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">25€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -55,6 +58,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
             <div class="description-carte--page1">
@@ -82,6 +88,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">40€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -91,6 +100,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -99,6 +111,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
@@ -114,6 +129,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">18€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -123,6 +141,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">22€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -131,6 +152,8 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
+                    </div><div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
