--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,6 +47,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">25€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -55,6 +58,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
             <div class="description-carte--page1">
@@ -65,6 +71,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">20€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                 <div class="carte-resto--page1">
@@ -73,6 +82,9 @@
                 </div>
                 <div class="prix--page1">
                     <p class="p-prix--page1">35€</p>
+                </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
                 </div>
         </div>
         </div>
@@ -86,7 +98,10 @@
                     <p class="descriptif-plat--page1">Sur lit de purée de céleri-rave</p>
                 </div>
                 <div class="prix--page1">
-                    <p class="p-prix--page1">40€/p>
+                    <p class="p-prix--page1">40€</p>
+                </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
                 </div>
             </div>
             <div class="description-carte--page1">
@@ -97,6 +112,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -105,6 +123,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
@@ -120,6 +141,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">18€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -129,6 +153,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">22€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -137,6 +164,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
@@ -161,7 +191,6 @@
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
             <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
-        </div>
         </div>
     </footer>
     </body>
