--- a/Le-delice.html
+++ b/Le-delice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
         <title>Le délice des sens</title>
   </head>
   <body class="marge--page1">
-    <header>
+    <header  class="marge--page1">
         <div class="first-title--page1">
             <div class="logo-fleche">
                 <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
@@ -24,8 +24,8 @@
         </div>
         <div class="image-background-Le-delice">
         </div>
-    </header class="marge--page1">
-    <main class="main--page1">
+    </header>
+        <main class="main--page1">
         <div class="titre-page1">
             <div class="titre-page1-A-la-francaise">
                 <h1>Le délice des sens</h1>
@@ -47,6 +47,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">25€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -56,6 +59,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -64,6 +70,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">20€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
@@ -79,6 +88,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">40€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -88,6 +100,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -96,6 +111,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
@@ -111,6 +129,9 @@
                 <div class="prix--page1">
                     <p class="p-prix--page1">18€</p>
                 </div>
+                <div class="div-au-survol">
+                    <i class="fas fa-check-circle"></i>
+                </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -120,6 +141,9 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">22€</p>
                     </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
             </div>
             <div class="description-carte--page1">
                     <div class="carte-resto--page1">
@@ -128,6 +152,9 @@
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
                     </div>
             </div>
         </div>
